JSAI/error/src/test/resources/scoping/v308.js
var x;
try {
	x();
} catch (x) {
	print("implicit")	
} 